[package]
name = "sfc"
version = "0.1.0"
edition = "2021"

[dependencies]
rustyline = "14.0.0"
libc = "0.2"

# Указываем правильный путь к перенесенному файлу
[[bin]]
name = "touch"
path = "src/touch_impl.rs"

[[bin]]
name = "mk"
path = "src/touch_impl.rs"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[[bin]]
name = "id"
path = "src/id_impl.rs"

[[bin]]
name = "whoami"
path = "src/id_impl.rs"

[[bin]]
name = "ls"
path = "src/bin/ls.rs"

[[bin]]
name = "dir"
path = "src/bin/ls.rs"

[[bin]]
name = "vdir"
path = "src/bin/ls.rs"
